--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   php:
     build: 
       context: .
-    image: amakundu/moe-php-mysql-demo:1.0.0
+    image: ./Dockerfile
     networks:
       - frontend
       - backend
