--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - MYSQL_PASSWORD=moepass
       - MYSQL_DB=moe_db
     volumes:
-      - .:/var/www/html/:wq
+      - .:/var/www/html/
       
     ports:
       - "30001:80"
