--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   php:
-    build: 
+    build:
       context: .
       dockerfile: ./Dockerfile
     networks:
@@ -24,9 +24,12 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=rootpassword
       - MYSQL_USER=moeuser
-      - MYSQL_PASSWORD=moepass 
+      - MYSQL_PASSWORD=moepass
       - MYSQL_DATABASE=moe_db
-    container_name: moe-mysql-app    
+    container_name: moe-mysql-app
+    volumes:
+      - .:/var/www/html/
+      - ./employees.sql:/docker-entrypoint-initdb.d/employees.sql
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:4.7
     depends_on:
@@ -37,9 +40,9 @@ services:
       - "30002:80"
     environment:
       - PMA_HOST=moe-mysql-app
-      - PMA_PORT= 3306 
+      - PMA_PORT= 3306
     volumes:
-      - /sessions   
+      - /sessions
     container_name: moe-phpmyadmin-app
 networks:
   frontend:
